--- a/app/Resources/views/course_info/presentation/form/remove_teacher.html.twig
+++ b/app/Resources/views/course_info/presentation/form/remove_teacher.html.twig
@@ -1,8 +1,8 @@
 {{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_presentation_remove_teacher', {'id': courseInfo.id, 'teacherId': form.vars.data.id}), 'data-card': 'card-teacher' }}) }}
 {{ form_errors(form) }}
-<h5>Êtes-vous sûr(e) de vouloir supprimer l'enseignant "{{ form.vars.data.lastname }} {{ form.vars.data.firstname }}" ?</h5>
+<h5>{{ 'app.presentation.form.teacher.delete' | trans({'%lastname%': form.vars.data.lastname, '%firstname%': form.vars.data.firstname}) }}</h5>
 <div class="d-flex justify-content-center">
-    <button type="submit" class="btn btn-danger rounded mr-2">Supprimer</button>
+    <button type="submit" class="btn btn-danger rounded mr-2">{{ 'app.general.button.delete' }}</button>
 </div>
 {{ form_widget(form._token) }}
 {{ form_end(form) }}
