--- a/app/Resources/views/course_info/admin/new.html.twig
+++ b/app/Resources/views/course_info/admin/new.html.twig
@@ -20,8 +20,8 @@
                     {{ form_widget(form.year) }}
                 </div>
                 <div class="form-group">
-                    {{ form_label(form.course.etbId) }}
-                    {{ form_widget(form.course.etbId) }}
+                    {{ form_label(form.course.code) }}
+                    {{ form_widget(form.course.code) }}
                 </div>
             {#
                 <div class="form-group">
