--- a/app/Resources/views/default/homepage.html.twig
+++ b/app/Resources/views/default/homepage.html.twig
@@ -44,7 +44,7 @@
                                     {{ courseInfo.course.type }}
                                 </td>
                                 <td style="width: 25%">
-                                    {{ courseInfo.course.etbId }}
+                                    {{ courseInfo.course.code }}
                                 </td>
                             </tr>
                         {% endfor %}
