--- a/app/Resources/views/structure/edit.html.twig
+++ b/app/Resources/views/structure/edit.html.twig
@@ -7,7 +7,7 @@
         <!-- form start -->
         {{ form_start(form) }}
         <div class="card-body">
-            {{ form_row(form.etbId) }}
+            {{ form_row(form.code) }}
             {{ form_row(form.label) }}
             {{ form_row(form.campus) }}
             <div class="custom-control custom-switch">
