--- a/app/Resources/views/structure/new.html.twig
+++ b/app/Resources/views/structure/new.html.twig
@@ -6,7 +6,7 @@
         <div class="card-body">
             {{ form_start(form) }}
                 {{ form_row(form.label) }}
-                {{ form_row(form.etbId) }}
+                {{ form_row(form.code) }}
                 {{ form_row(form.campus) }}
                 <button class="btn btn-primary">Enregistrer</button>
             {{ form_end(form) }}
