ajout d'un groupe dans l'administration done

--- a/app/Resources/views/groups/index.html.twig
+++ b/app/Resources/views/groups/index.html.twig
@@ -13,9 +13,9 @@
                     <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin_groups_index')  }}">Réinitialiser les filtres</a>
                 </div>
                 <input type="submit" style="position: absolute; left: -9999px"/>
-                {#<div class="col-md-6 col-sm-6">
-                    <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_structure_new')  }}">Ajouter une structure</a>
-                </div>#}
+                <div class="col-md-8 col-sm-8">
+                    <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_groups_new')  }}">Ajouter un groupe</a>
+                </div>
             </div>
             {{ form_end(form) }}
         </div>
