--- a/app/Resources/views/groups/edit.html.twig
+++ b/app/Resources/views/groups/edit.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Ajouter un groupe' %}
+{% set h1 = 'Editer un groupe' %}
 
 {% block subContent %}
     <div class="card">
