changement des tous les etbid en code. Il serait bon de tester toutes les fonctionnalités du site

--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -25,7 +25,7 @@
             </a>
         </li>
 
-        {% set referentielLink = ['app_admin_activity', 'app_admin_type_activity', 'app_admin_mode_activity','app_admin_year', 'app_admin_equipment', 'app_admin_structure'] %}
+        {% set referentielLink = ['app_admin_activity', 'app_admin_type_activity', 'app_admin_mode_activity', 'app_admin_campus', 'app_admin_domain', 'app_admin_lang', 'app_admin_period',  'app_admin_year', 'app_admin_equipment', 'app_admin_structure'] %}
         <li class="nav-item has-treeview {{ printActiveAdminSidebarLink(referentielLink) ? 'menu-open' }}">
             <a href="#" class="nav-link {{ printActiveAdminSidebarLink(referentielLink) }}">
                 <i class="nav-icon fas fa-book"></i>
