Fix branch select2

--- a/app/Resources/views/course_info/presentation/form/general.html.twig
+++ b/app/Resources/views/course_info/presentation/form/general.html.twig
@@ -108,9 +108,9 @@
 
     $('#infos_level').click(function () {
         var message = '<ul>' +
-            {{ 'app.presentation.form.general.level.beginner' | trans }} +
-            {{ 'app.presentation.form.general.level.intermediary' | trans }} +
-            {{ 'app.presentation.form.general.level.advanced' | trans }} +
+            '{{ 'app.presentation.form.general.level.beginner' | trans }}' +
+            '{{ 'app.presentation.form.general.level.intermediary' | trans }}' +
+            '{{ 'app.presentation.form.general.level.advanced' | trans }}' +
             '</ul>';
         bootbox.dialog({
             message: message,
