--- a/app/Resources/views/course_info/activities/form/add_activity.html.twig
+++ b/app/Resources/views/course_info/activities/form/add_activity.html.twig
@@ -1,38 +1,45 @@
-<h5>
-    {{ activity.label }}
-</h5>
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_activities_add_activity', {'sectionId': courseSection.id, 'activityId': activity.id, 'activityTypeId': form.vars.value.activityType.id })}}) }}
-{{ form_errors(form) }}
-{{ form_row(form.description) }}
-{{ form_row(form.activityType, {label_attr: {class: 'radio-custom'} }) }}
+<div class="mb-2">
+    <h5>
+        {{ activity.label }}
+    </h5>
+    <small>
+        {{ activity.description }}
+    </small>
+</div>
+<div>
+    {{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_activities_add_activity', {'sectionId': courseSection.id, 'activityId': activity.id, 'activityTypeId': form.vars.value.activityType.id })}}) }}
+    {{ form_errors(form) }}
+    {{ form_row(form.description) }}
+    {{ form_row(form.activityType, {label_attr: {class: 'radio-custom'} }) }}
 
-{{ form_row(form.activityMode, {label_attr: {class: 'radio-custom'} }) }}
+    {{ form_row(form.activityMode, {label_attr: {class: 'radio-custom'} }) }}
 
-<label>{{ "app.activities.form.activity.evaluable" | trans }}</label>
-{{ form_row(form.evaluable) }}
-<div id="eval-content" class="d-none">
-    <label>{{ "app.activities.form.activity.control" | trans }}</label>
-    {{ form_row(form.evaluationCt) }}
-    <div class="input-group mb-3">
-    {{ form_errors(form.evaluationRate) }}
-    {{ form_label(form.evaluationRate) }}
-    {{ form_widget(form.evaluationRate) }}
-    <div class="input-group-append">
+    <label>{{ "app.activities.form.activity.evaluable" | trans }}</label>
+    {{ form_row(form.evaluable) }}
+    <div id="eval-content" class="d-none">
+        <label>{{ "app.activities.form.activity.control" | trans }}</label>
+        {{ form_row(form.evaluationCt) }}
+        <div class="input-group mb-3">
+            {{ form_errors(form.evaluationRate) }}
+            {{ form_label(form.evaluationRate) }}
+            {{ form_widget(form.evaluationRate) }}
+            <div class="input-group-append">
         <span class="input-group-text">
             <i class="fas fa-percent"></i>
         </span>
+            </div>
+        </div>
+        {{ form_row(form.evaluationTeacher) }}
+        {{ form_row(form.evaluationPeer) }}
     </div>
+    <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-primary rounded">
+            {{ "app.general.button.add" | trans }}
+        </button>
     </div>
-    {{ form_row(form.evaluationTeacher) }}
-    {{ form_row(form.evaluationPeer) }}
+    {{ form_widget(form._token) }}
+    {{ form_end(form) }}
 </div>
-<div class="d-flex justify-content-center">
-    <button type="submit" class="btn btn-primary rounded">
-        {{ "app.general.button.add" | trans }}
-    </button>
-</div>
-{{ form_widget(form._token) }}
-{{ form_end(form) }}
 
 <script>
     $('#course_section_activity_evaluable').bootstrapToggle();
