--- a/app/Resources/views/course_info/activities/view/activity_content.html.twig
+++ b/app/Resources/views/course_info/activities/view/activity_content.html.twig
@@ -1,22 +1,37 @@
-<div id="list-activities" class="p-2">
-    {% if activeSection.courseSectionActivities is empty %}
-        <div class="text-center p-2">
-            <h3 class="text-danger">{{ 'app.activities.view.activity.empty_activity' | trans }}</h3>
-            <div class="text-bold">
-                {{ 'app.activities.view.activity.add_activities' | trans }}
-            </div>
-            <i class="fas fa-arrow-down fa-5x"></i>
+{% if activeSection.courseSectionActivities is empty %}
+    <div class="text-center p-2" style="min-height: 300px">
+        <h3 class="text-danger">{{ 'app.activities.view.activity.empty_activity' | trans }}</h3>
+        <div class="text-bold">
+            {{ 'app.activities.view.activity.add_activities' | trans }}
         </div>
-    {% else %}
+        <i class="fas fa-arrow-down fa-5x"></i>
+    </div>
+{% else %}
+    <div id="list-activities" class="p-2">
         {% for sectionActivity in activeSection.courseSectionActivities %}
-            <div class="card mb-2 shadow">
+            <div class="card mb-2 shadow activity-sort" data-id="{{ sectionActivity.id }}">
                 <div class="card-body">
                     <div class="row">
                         <div class="col my-auto">
-                            {{ sectionActivity.activity.label }} ({{ sectionActivity.activityMode }}) {% if sectionActivity.description %} : {{ sectionActivity.description }}{% endif %}
+                            <div>
+                                {{ sectionActivity.activity.label }} ({{ sectionActivity.activityMode }}) {% if sectionActivity.description %} : {{ sectionActivity.description }}{% endif %}
+                            </div>
+                            {% if sectionActivity.evaluable %}
+                                <div class="mt-1">
+                                    {% if sectionActivity.evaluationPeer %}<span class="badge badge-primary rounded mr-2">Evalué par les pairs</span>{% endif %}
+                                    {% if sectionActivity.evaluationTeacher %}<span class="badge badge-primary rounded">Evalué par les enseignants</span>{% endif %}
+                                </div>
+                            {% endif %}
                         </div>
                         <div class="col-2 my-auto">
-                            <span class="badge badge-primary rounded float-right">{{ sectionActivity.activityType }}</span>
+                            <div class="row">
+                                <span class="badge badge-success rounded">{{ sectionActivity.activityType }}</span>
+                            </div>
+                            {% if sectionActivity.evaluable %}
+                                <div class="row mt-1">
+                                    <span class="badge badge-primary rounded">{{ (sectionActivity.evaluationCt ? 'ct' : 'cc') | trans }}</span>
+                                </div>
+                            {% endif %}
                         </div>
                         <div class="col-1 my-auto btn-group dropleft" style="z-index: 15">
                             <button class="btn dropdown-icon" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v"></i> </button>
@@ -40,7 +55,7 @@
                                         {{ sectionActivity.evaluationRate }}%
                                     </div>
                                 {% else %}
-                                    <div class="ribbon bg-danger">
+                                    <div class="ribbon bg-secondary">
                                         0%
                                     </div>
                                 {% endif %}
@@ -50,5 +65,5 @@
                 </div>
             </div>
         {% endfor %}
-    {% endif %}
-</div>
+    </div>
+{% endif %}
