--- a/app/Resources/views/course_info/activities/view/sidebar_sections.html.twig
+++ b/app/Resources/views/course_info/activities/view/sidebar_sections.html.twig
@@ -7,9 +7,9 @@
                 {{ 'app.activities.view.sidebar.empty_section' | trans }}
             </div>
         {% else %}
-            <ul id="list-sections" class="nav nav-pills flex-column">
+            <ul class="nav nav-pills flex-column list-sortable" data-url="{{ path('course_activities_sort_sections', {'courseInfoId': courseInfo.id}) }}">
                 {% for section in courseInfo.courseSections %}
-                    <li class="section-sort nav-item {% if section is same as (activeSection) %}active{% endif %}" data-id="{{ section.id }}">
+                    <li class="item-sortable nav-item {% if section is same as (activeSection) %}active{% endif %}" data-id="{{ section.id }}">
                         <a style="width: 180px" class="d-inline-block bg-transparent text-truncate nav-link menu-tab text-white align-middle overflow-hidden" href="{{ path('course_activities', { 'id': courseInfo.id, 'sectionId': section.id }) }}">
                             {{ section.title }}
                         </a>
