--- a/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
+++ b/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
@@ -103,8 +103,10 @@
         </div>
     </div>
     <div class="pt-4 text-center">
-        <button type="button" class="btn btn-light"><i class="fas fa-comment-dots"></i> Demander un avis (ingénieur
-            pédagogique)
+        <button type="button"
+                class="btn btn-light modal-action"
+                data-action-title="Demander un avis sur le syllabus"
+            <i class="fas fa-comment-dots"></i> Demander un avis (ingénieur pédagogique)
         </button>
         <button type="button" class="btn btn-light">Donner un avis sur la plateforme</button>
     </div>
